// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness acp --help 1`] = `
"base-harness acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: base-harness.local)
                                                            [string] [default: "base-harness.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness mcp --help 1`] = `
"base-harness mcp

manage MCP (Model Context Protocol) servers

Commands:
  base-harness mcp add [name]     add an MCP server
  base-harness mcp list           list MCP servers and their status                    [aliases: ls]
  base-harness mcp auth [name]    authenticate with an OAuth-enabled MCP server
  base-harness mcp logout [name]  remove OAuth credentials for an MCP server
  base-harness mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness attach --help 1`] = `
"base-harness attach <url>

attach to a running base-harness server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to BASE_HARNESS_SERVER_PASSWORD)        [string]
  -u, --username      basic auth username (defaults to BASE_HARNESS_SERVER_USERNAME or
                      'base-harness')                                                       [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness run --help 1`] = `
"base-harness run [message..]

run base-harness with a message

Positionals:
  planId   reviewed plan ID                                                                 [string]
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --command       the command to run, use message for args                              [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session before continuing (requires --continue or --session)[boolean]
      --share         share the session                                                    [boolean]
  -m, --model         model to use in the format of provider/model                          [string]
      --agent         agent to use                                                          [string]
      --domain        kernel domain (uses the Host setting unless specified)
                                                            [string] [choices: "develop", "general"]
      --hackathon     enable the hackathon develop skill                  [boolean] [default: false]
      --plan          build and review a plan without executing it        [boolean] [default: false]
      --execute-plan  execute the current reviewed plan by ID                               [string]
      --format        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file          file(s) to attach to message                                           [array]
      --title         title for the session (uses truncated prompt if no value provided)    [string]
      --attach        attach to a running base-harness server (e.g., http://localhost:4096) [string]
  -p, --password      basic auth password (defaults to BASE_HARNESS_SERVER_PASSWORD)        [string]
  -u, --username      basic auth username (defaults to BASE_HARNESS_SERVER_USERNAME or
                      'base-harness')                                                       [string]
      --dir           directory to run in, path on remote server if attaching               [string]
      --port          port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant       model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking      show thinking blocks                                                 [boolean]
  -i, --interactive   run in direct interactive split-footer mode         [boolean] [default: false]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness execute --help 1`] = `
"base-harness execute <planId>

execute a reviewed plan in its original workspace

Positionals:
  planId   reviewed plan ID                                                      [string] [required]
  message  message to send                                                    [string] [default: []]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --command       the command to run, use message for args                              [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session before continuing (requires --continue or --session)[boolean]
      --share         share the session                                                    [boolean]
  -m, --model         model to use in the format of provider/model                          [string]
      --agent         agent to use                                                          [string]
      --domain        kernel domain (uses the Host setting unless specified)
                                                            [string] [choices: "develop", "general"]
      --hackathon     enable the hackathon develop skill                  [boolean] [default: false]
      --plan          build and review a plan without executing it        [boolean] [default: false]
      --execute-plan  execute the current reviewed plan by ID                               [string]
      --format        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file          file(s) to attach to message                                           [array]
      --title         title for the session (uses truncated prompt if no value provided)    [string]
      --attach        attach to a running base-harness server (e.g., http://localhost:4096) [string]
  -p, --password      basic auth password (defaults to BASE_HARNESS_SERVER_PASSWORD)        [string]
  -u, --username      basic auth username (defaults to BASE_HARNESS_SERVER_USERNAME or
                      'base-harness')                                                       [string]
      --dir           directory to run in, path on remote server if attaching               [string]
      --port          port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant       model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking      show thinking blocks                                                 [boolean]
  -i, --interactive   run in direct interactive split-footer mode         [boolean] [default: false]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness debug --help 1`] = `
"base-harness debug

debugging and troubleshooting tools

Commands:
  base-harness debug config        show resolved configuration
  base-harness debug lsp           LSP debugging utilities
  base-harness debug rg            ripgrep debugging utilities
  base-harness debug file          file system debugging utilities
  base-harness debug scrap         list all known projects
  base-harness debug skill         list all available skills
  base-harness debug snapshot      snapshot debugging utilities
  base-harness debug startup       print startup timing
  base-harness debug agent <name>  show agent configuration details
  base-harness debug v2            debug v2 catalog and built-in plugins
  base-harness debug info          show debug information
  base-harness debug paths         show global paths (data, config, cache, state)
  base-harness debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness providers --help 1`] = `
"base-harness providers

manage AI providers and credentials

Commands:
  base-harness providers list               list providers and credentials             [aliases: ls]
  base-harness providers login [url]        log in to a provider
  base-harness providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness agent --help 1`] = `
"base-harness agent

manage agents

Commands:
  base-harness agent create  create a new agent
  base-harness agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness serve --help 1`] = `
"base-harness serve

starts a headless base-harness server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: base-harness.local)
                                                            [string] [default: "base-harness.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness web --help 1`] = `
"base-harness web

start base-harness server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: base-harness.local)
                                                            [string] [default: "base-harness.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness models --help 1`] = `
"base-harness models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness stats --help 1`] = `
"base-harness stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness export --help 1`] = `
"base-harness export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness import --help 1`] = `
"base-harness import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness session --help 1`] = `
"base-harness session

manage sessions

Commands:
  base-harness session list                list sessions
  base-harness session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness plugin --help 1`] = `
"base-harness plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness db --help 1`] = `
"base-harness db

database tools

Commands:
  base-harness db [query]     open an interactive sqlite3 shell or run a query             [default]
  base-harness db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness mcp list --help 1`] = `
"base-harness mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness mcp add --help 1`] = `
"base-harness mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness mcp auth --help 1`] = `
"base-harness mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  base-harness mcp auth list  list OAuth-capable MCP servers and their auth status     [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness mcp logout --help 1`] = `
"base-harness mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness providers list --help 1`] = `
"base-harness providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness providers login --help 1`] = `
"base-harness providers login [url]

log in to a provider

Positionals:
  url  base-harness auth provider                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness providers logout --help 1`] = `
"base-harness providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness agent create --help 1`] = `
"base-harness agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness agent list --help 1`] = `
"base-harness agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness session list --help 1`] = `
"base-harness session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness session delete --help 1`] = `
"base-harness session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`base-harness CLI help-text snapshots every documented command emits stable help text: base-harness db path --help 1`] = `
"base-harness db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
